--- a/ActividadFormativa1-1-TipoProblema.html
+++ b/ActividadFormativa1-1-TipoProblema.html
@@ -1,39 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
     <title>Tienda de Videojuegos</title>
+
 </head>
+
 <body>
-    <div></div>
+    <div class="container">
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link" href="">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="">Productos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="">Contacto</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="">Información</a>
+            </li>
 
-    <div class="header">
-        <img src="img/logo.jpg" alt="logo" width="100" />
+        </ul>
 
-        <nav>
-            <!-- Menu -->
-            <ul>
-                <!-- Lista -->
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="index.html">Productos</a></li>
-                <li><a href="index.html">Contacto</a></li>
-                <li><a href="index.html">Información</a></li>
-            </ul>
-        </nav>
+
+        <!-- carrusel -->
+
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/horizon.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/persona.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/zelda.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+
+
+        <!-- fin carrusel -->
+
+
+
+
+
+        <div class="header">
+            <img src="img/logo.jpg" alt="logo" width="100" />
+
+            <nav>
+                <!-- Menu -->
+                <ul>
+                    <!-- Lista -->
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="index.html">Productos</a></li>
+                    <li><a href="index.html">Contacto</a></li>
+                    <li><a href="index.html">Información</a></li>
+                </ul>
+            </nav>
+
+
+            <img src="img/ps5.PNG" alt="PlayStation 5" width="200">
+            <img src="img/switch.jpg" alt="Nintendo Switch" width="200">
+        </div>
+        <form action="sitio_en_construccion.html">
+            <input type="submit" value="Información" />
+        </form>
+        <hr>
+        <footer>
+            <a href="https://www.facebook.com/" target="_blank">Siguenos en Facebook</a>
+            <a href="https://www.instragram.com/" target="_blank">Siguenos en Instagram</a>
+            <a>O contactanos por nuestro telefono +56 9 9999 9999</a>
+        </footer>
     </div>
 
-    <img src="img/ps5.PNG" alt="PlayStation 5" width="200">
-    <img src="img/switch.jpg" alt="Nintendo Switch" width="200">
 
-    <form action="sitio_en_construccion.html">
-        <input type="submit" value="Información" />
-    </form>
-    <footer>
-    <a href="https://www.facebook.com/" target="_blank">Siguenos en Facebook</a>
-    <a href="https://www.instragram.com/" target="_blank">Siguenos en Instagram</a>
-    
-    </footer>
 </body>
+
 </html>
