--- a/ActividadFormativa1-1-TipoProblema.html
+++ b/ActividadFormativa1-1-TipoProblema.html
@@ -5,100 +5,192 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script>
-    <title>Tienda de Videojuegos</title>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
+    <title>Tienda Super Gamer</title>
 </head>
 
 <body>
     <div class="container">
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" href="">Inicio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="">Productos</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="">Contacto</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="">Información</a>
-            </li>
 
-        </ul>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" width="60" height="60"> Tienda Super Gamer</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="ActividadFormativa1-1-TipoProblema.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="sitio_en_construccion.html">¿Como Comprar?</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link ">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
 
 
         <!-- carrusel -->
 
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/horizon.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/persona.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="img/zelda.jpg" class="d-block w-100" alt="...">
+        <div>
+
+        </div>
+        <div class="row m-2">
+            <div class="col-md-3 bg-dark col-xs-12">
+                <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white ">
+                    <a href="/"
+                        class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                        <span class="fs-5 d-none d-sm-inline">Menu</span>
+                    </a>
+                    <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start"
+                        id="menu">
+                        <li class="nav-item">
+                            <a href="#" class="nav-link align-middle px-0">
+                                <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Consolas</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Juegos</span></a>
+                        </li>
+                        <li>
+                            <a href="#" class="nav-link px-0 align-middle">
+                                <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Accesorios</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <hr>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <div class="col-md-9 col-xs-12">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/horizon.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/persona.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/zelda.jpg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+            <div class="col-2"></div>
         </div>
-
-
 
         <!-- fin carrusel -->
 
+        <!-- comienzo card de contenido -->
 
-
-
-
-        <div class="header">
-            <img src="img/logo.jpg" alt="logo" width="100" />
-
-            <nav>
-                <!-- Menu -->
-                <ul>
-                    <!-- Lista -->
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="index.html">Productos</a></li>
-                    <li><a href="index.html">Contacto</a></li>
-                    <li><a href="index.html">Información</a></li>
-                </ul>
-            </nav>
-
-
-            <img src="img/ps5.PNG" alt="PlayStation 5" width="200">
-            <img src="img/switch.jpg" alt="Nintendo Switch" width="200">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="text-center">Productos</h4>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-6 col-xs-12 text-center">
+                        <div class="card">
+                            <div class="card-header">PlayStation 5</div>
+                            <div class="card-body">
+                                <img src="img/ps5.PNG" alt="PlayStation 5" width="200" class="img-card">
+                                <hr>
+                                <a href="sitio_en_construccion.html">
+                                    <button class="btn btn-info button-card">Más Información</button>
+                                </a>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="card">
+                            <div class="card-header">PlayStation 4</div>
+                            <div class="card-body">
+                                <img src="img/ps4.png" alt="PlayStation 4" width="200"  class="img-card">
+                                <hr>
+                                <a href="sitio_en_construccion.html">
+                                    <button class="btn btn-info button-card">Más Información</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xs-12 text-center">
+                        <div class="card">
+                            <div class="card-header">Nintendo Switch</div>
+                            <div class="card-body">
+                                <img src="img/switch.jpg" alt="Nintendo Switch" width="200"  class="img-card">
+                                <hr>
+                                <a href="sitio_en_construccion.html">
+                                    <button class="btn btn-info button-card">Más Información</button>
+                                </a>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="card">
+                            <div class="card-header">Nintendo Switch Lite</div>
+                            <div class="card-body">
+                                <img src="img/switchlite.png" alt="Nintendo Switch" width="200"  class="img-card">
+                                <hr>
+                                <a href="sitio_en_construccion.html">
+                                    <button class="btn btn-info button-card">Más Información</button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <form action="sitio_en_construccion.html">
-            <input type="submit" value="Información" />
-        </form>
-        <hr>
-        <footer>
-            <a href="https://www.facebook.com/" target="_blank">Siguenos en Facebook</a>
-            <a href="https://www.instragram.com/" target="_blank">Siguenos en Instagram</a>
-            <a>O contactanos por nuestro telefono +56 9 9999 9999</a>
-        </footer>
+
+        <!-- fin card de contenido -->
+
+
     </div>
 
+    <footer class="footer-main">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-xs-12 footer-left">
+                    <img src="img/logo.png" alt="logo" width="100" id="logo-footer" />
+                    <h1>Tienda Super Gamer</h1>
+                </div>
+                <div class="col-md-6 col-xs-12 footer-right footer-icons">
+                    <i class="icon-facebook"></i> Siguenos en <a href="https://www.facebook.com/" target="_blank"
+                        id="footer-link"> Facebook</a> <br />
+                    <i class="icon-instagram"></i> Siguenos en <a href="https://www.instragram.com/" target="_blank"
+                        id="footer-link"> Instagram</a> <br />
+                    <i class="icon-phone"></i> <a> +56 9 9999 9999</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
 
 </html>
