--- a/sitio_en_construccion.html
+++ b/sitio_en_construccion.html
@@ -1,30 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sitio en Construcción</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
+    <title>Tienda de Videojuegos</title>
+
+    
+
 </head>
+
 <body>
-    <div class="header">
-        <img src="img/logo.jpg" alt="logo" width="100" />
+    <div class="container">
+        
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" width="60" height="60"> Tienda Super Gamer</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="ActividadFormativa1-1-TipoProblema.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="sitio_en_construccion.html">¿Como Comprar?</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link ">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
 
-        <nav>
-            <!-- Menu -->
-            <ul>
-                <!-- Lista -->
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="index.html">Productos</a></li>
-                <li><a href="index.html">Contacto</a></li>
-                <li><a href="index.html">Información</a></li>
-            </ul>
-        </nav>
+        <div class="row">
+            <div class="col text-center">
+                <img src="img/enconstruccion.png" alt="Sitio en Construcción" width="80%" >
+            </div>
+        </div>
     </div>
-
-    <img src="img/enconstruccion.png" alt="Sitio en Construcción" >
-
-    <button 
-
+    <footer class="footer-main">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-xs-12 footer-left">
+                    <img src="img/logo.png" alt="logo" width="100" id="logo-footer" />
+                    <h1>Tienda Super Gamer</h1>
+                </div>
+                <div class="col-md-6 col-xs-12 footer-right footer-icons">
+                    <i class="icon-facebook"></i> Siguenos en <a href="https://www.facebook.com/" target="_blank"
+                        id="footer-link"> Facebook</a> <br />
+                    <i class="icon-instagram"></i> Siguenos en <a href="https://www.instragram.com/" target="_blank"
+                        id="footer-link"> Instagram</a> <br />
+                    <i class="icon-phone"></i> <a> +56 9 9999 9999</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
