--- a/index.html
+++ b/index.html
@@ -16,30 +16,42 @@
 </head>
 
 <body>
+     <!-- barra de menu -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" width="60" height="60"> Tienda Super Gamer</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="sitio_en_construccion.html">¿Como Comprar?</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link ">Contacto</a>
+              </li>
+              
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="register.html">Registrarse</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="login.html">Iniciar Sesión</a>
+                </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
     <div class="container">
 
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" width="60" height="60"> Tienda Super Gamer</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="ActividadFormativa1-1-TipoProblema.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="sitio_en_construccion.html">¿Como Comprar?</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link ">Contacto</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+      
 
 
         <!-- carrusel -->
@@ -75,7 +87,7 @@
                 </div>
             </div>
             <div class="col-md-9 col-xs-12">
-                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div id="carrusel_productos" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="img/horizon.jpg" class="d-block w-100" alt="...">
@@ -87,12 +99,12 @@
                             <img src="img/zelda.jpg" class="d-block w-100" alt="...">
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carrusel_productos"
                         data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    <button class="carousel-control-next" type="button" data-bs-target="#carrusel_productos"
                         data-bs-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
@@ -166,7 +178,7 @@
 
 
     </div>
-
+     <!-- pie de pagina -->
     <footer class="footer-main">
         <div class="container">
             <div class="row">
