--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" width="60" height="60"> Tienda Super Gamer</a>
+          <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" width="60" height="60"> Tienda Super Gamer</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -79,21 +79,22 @@
         </div>
       </nav>
 
-  <div class="form-container row">
-    <form class="col-md-6 form-register col-xs-12">
-
-      <h2> Iniciar Sesion </h2>
-
-      <div class="mb-3">
-        <label for="email" class="form-label">Dirección Email :</label>
-        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-      </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Clave :</label>
-        <input type="password" class="form-control" id="password">
-      </div>
-      <button type="submit" class="btn btn-primary" id="login">Iniciar Sesion</button>
-    </form>
+  <div class="container">
+    <div class="form-container row">
+      <form class="col-md-6 form-register col-xs-12">
+        <h2> Iniciar Sesion </h2>
+        <div class="mb-3">
+          <label for="email" class="form-label">Dirección Email :</label>
+          <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Clave :</label>
+          <input type="password" class="form-control" id="password">
+        </div>
+        <button type="submit" class="btn btn-primary" id="login">Iniciar Sesion</button>
+      </form>
+    </div>
+  </div>
  <!-- pie de pagina -->
     <footer class="footer-main">
       <div class="container">
@@ -112,7 +113,7 @@
         </div>
       </div>
     </footer>
-  </div>
+  
 </body>
 
 </html>
