--- a/index.html
+++ b/index.html
@@ -49,18 +49,9 @@
       </nav>
 
     <div class="container">
-
-
-      
-
-
         <!-- carrusel -->
-
-        <div>
-
-        </div>
-        <div class="row m-2">
-            <div class="col-md-3 bg-dark col-xs-12">
+        <div class="row m-2 ">
+            <div class="col-md-3 bg-dark col-xs-12  aside-div">
                 <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white ">
                     <a href="/"
                         class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
@@ -118,7 +109,7 @@
 
         <!-- comienzo card de contenido -->
 
-        <div class="card">
+        <div class="card card-products">
             <div class="card-header">
                 <h4 class="text-center">Productos</h4>
             </div>
