--- a/login.html
+++ b/login.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
@@ -22,21 +24,21 @@
       $("#login").click(function () {
         let email = $("#email").val()
         let password = $("#password").val()
-        if(!isEmail(email)) {
+        if (!isEmail(email)) {
           alert("El Correo debe cumplir con un formato válido")
           $("#email").focus()
           return
         }
-        if(password!="12345678"){
+        if (password != "12345678") {
           alert("Credenciales Inválidas")
           $("password").focus()
-        }else{
+        } else {
           alert("Login Exitoso!")
         }
 
       })
-      
-        function isEmail(email) {
+
+      function isEmail(email) {
         var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
         return regex.test(email);
       }
@@ -49,35 +51,37 @@
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" width="60" height="60"> Tienda Super Gamer</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="sitio_en_construccion.html">¿Como Comprar?</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link ">Contacto</a>
-              </li>
-              
-            </ul>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="register.html">Registrarse</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="login.html">Iniciar Sesión</a>
-                </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" width="60" height="60"> Tienda Super
+        Gamer</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sitio_en_construccion.html">¿Como Comprar?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link ">Contacto</a>
+          </li>
+
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="register.html">Registrarse</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">Iniciar Sesión</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <div class="container">
     <div class="form-container row">
@@ -92,28 +96,29 @@
           <input type="password" class="form-control" id="password">
         </div>
         <button type="submit" class="btn btn-primary" id="login">Iniciar Sesion</button>
+        <button type="button" class="btn btn-secondary">Olvide la clave</button>
       </form>
     </div>
   </div>
- <!-- pie de pagina -->
-    <footer class="footer-main">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-xs-12 footer-left">
-            <img src="img/logo.png" alt="logo" width="100" id="logo-footer" />
-            <h1>Tienda Super Gamer</h1>
-          </div>
-          <div class="col-md-6 col-xs-12 footer-right footer-icons">
-            <i class="icon-facebook"></i> Siguenos en <a href="https://www.facebook.com/" target="_blank"
-              id="footer-link"> Facebook</a> <br />
-            <i class="icon-instagram"></i> Siguenos en <a href="https://www.instragram.com/" target="_blank"
-              id="footer-link"> Instagram</a> <br />
-            <i class="icon-phone"></i> <a> +56 9 9999 9999</a>
-          </div>
+  <!-- pie de pagina -->
+  <footer class="footer-main">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-xs-12 footer-left">
+                    <img src="img/logo.png" alt="logo" width="100" id="logo-footer" />
+                    <h1>Tienda Super Gamer</h1>
+                </div>
+                <div class="col-md-6 col-xs-12 footer-right footer-icons">
+                    <i class="icon-facebook"></i> Siguenos en <a href="https://www.facebook.com/" target="_blank"
+                        id="footer-link"> Facebook</a> <br />
+                    <i class="icon-instagram"></i> Siguenos en <a href="https://www.instragram.com/" target="_blank"
+                        id="footer-link"> Instagram</a> <br />
+                    <i class="icon-phone"></i> <a> +56 9 9999 9999</a>
+                </div>
+            </div>
         </div>
-      </div>
     </footer>
-  
+
 </body>
 
 </html>
